--- a/connection_bd.ipynb
+++ b/connection_bd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,62 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['planet.29N',\n",
-       " 'planet.52N',\n",
-       " 'planet.35S',\n",
-       " 'dynamicearthnet_test_labels',\n",
-       " 'planet.46N',\n",
-       " 'planet.44N',\n",
-       " 'LICENSE',\n",
-       " 'labels',\n",
-       " 'planet.32N',\n",
-       " 'planet.13N',\n",
-       " 'planet.60S',\n",
-       " 'planet.31N',\n",
-       " 'planet.43N',\n",
-       " 'planet.35N',\n",
-       " 'planet.34N',\n",
-       " 'planet.48N',\n",
-       " 'planet.38S',\n",
-       " 'planet.36N',\n",
-       " 'planet.56S',\n",
-       " 'planet.47N',\n",
-       " 'planet.38N',\n",
-       " 'planet.20S',\n",
-       " 'planet.54S',\n",
-       " 'planet.20N',\n",
-       " 'planet.34S',\n",
-       " 'planet.18N',\n",
-       " 'sentinel1',\n",
-       " 'planet.50S',\n",
-       " 'planet.16N',\n",
-       " 'planet.19S',\n",
-       " 'planet.50N',\n",
-       " 'planet.11N',\n",
-       " 'planet.22S',\n",
-       " 'checksums.sha512',\n",
-       " 'planet.17N',\n",
-       " 'planet.10N',\n",
-       " 'sentinel2',\n",
-       " 'planet.33S',\n",
-       " 'planet.39N',\n",
-       " 'planet.54N',\n",
-       " 'planet.21S',\n",
-       " 'planet.49N',\n",
-       " 'planet.30N',\n",
-       " 'planet.15N',\n",
-       " 'planet.33N']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mlistdir(PATH_DATA)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
     }
    ],
    "source": [
@@ -101,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
