--- a/connection_bd.ipynb
+++ b/connection_bd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -32,12 +32,13 @@
     "sys.path.append(os.path.abspath(\"src\"))\n",
     "\n",
     "from sat_image_reader import SatImageReader\n",
-    "from classes_reader import ClassesReader\n"
+    "from classes_reader import ClassesReader\n",
+    "from image_alignement_check import ImageAlignementCheck\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +100,7 @@
        " 'planet.33N']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +120,7 @@
        "['1286_2921_13']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +142,7 @@
        "55"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +496,7 @@
        "[77 rows x 4 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +543,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +752,7 @@
        "[77 rows x 5 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +803,13 @@
       "       ...\n",
       "       'FCLASS_TR', 'FCLASS_ID', 'FCLASS_PL', 'FCLASS_GR', 'FCLASS_IT',\n",
       "       'FCLASS_NL', 'FCLASS_SE', 'FCLASS_BD', 'FCLASS_UA', 'geometry'],\n",
-      "      dtype='object', length=169)\n",
+      "      dtype='object', length=169)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "              label           key train_test  \\\n",
       "0  4397_4302_13_33S  4397_4302_13      train   \n",
       "1  2415_3082_13_18N  2415_3082_13      train   \n",
@@ -898,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1016,13 +1023,128 @@
        "4                     China           Asia  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_merged.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merged.to_csv(\"df_merged.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_zones[\"path\"] = df_merged[\"planet_path\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    ../../../../tsi/data_education/fil_rouge_Airbu...\n",
+       "1    ../../../../tsi/data_education/fil_rouge_Airbu...\n",
+       "2    ../../../../tsi/data_education/fil_rouge_Airbu...\n",
+       "3    ../../../../tsi/data_education/fil_rouge_Airbu...\n",
+       "4    ../../../../tsi/data_education/fil_rouge_Airbu...\n",
+       "Name: planet_path, dtype: object"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_zones.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_alignement_check = ImageAlignementCheck()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../../../../tsi/data_education/fil_rouge_Airbus_2025/dynamic_earth_net/planet.33S/planet/33S/12E-375N/4397_4302_13/PF-SR\n",
+      "Analyse des images 0 et 1...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Stocker les résultats\n",
+    "results_all = []\n",
+    "mean_shifts_all = []\n",
+    "max_shifts_all = []\n",
+    "zones_analyzed = []\n",
+    "\n",
+    "for path in df_zones[\"path\"]:\n",
+    "    print(path)\n",
+    "    if os.path.exists(path):  # Vérifie si le chemin existe\n",
+    "        try:\n",
+    "            results, mean_shifts, max_shifts = image_alignement_check.analyze_images_in_directory(\n",
+    "                path, threshold=10, atol=0.1, ratio=0.65\n",
+    "            )\n",
+    "            results_all.append(results)\n",
+    "            mean_shifts_all.append(mean_shifts)\n",
+    "            max_shifts_all.append(max_shifts)\n",
+    "            zones_analyzed.append(path)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Erreur sur {path} : {e}\")\n",
+    "            results_all.append([\"Error\"])\n",
+    "            mean_shifts_all.append([\"Error\"])\n",
+    "            max_shifts_all.append([\"Error\"])\n",
+    "    else:\n",
+    "        print(f\"⚠️ Chemin non trouvé : {path}\")\n",
+    "\n",
+    "# Convertir les résultats en DataFrame\n",
+    "df_results = pd.DataFrame(results_all).transpose()\n",
+    "df_results.columns = zones_analyzed\n",
+    "\n",
+    "df_mean_shifts = pd.DataFrame(mean_shifts_all).transpose()\n",
+    "df_mean_shifts.columns = zones_analyzed\n",
+    "\n",
+    "df_max_shifts = pd.DataFrame(max_shifts_all).transpose()\n",
+    "df_max_shifts.columns = zones_analyzed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results.to_csv(\"df_results.csv\", index=False)\n",
+    "df_mean_shifts.to_csv(\"df_mean_shifts.csv\", index=False)\n",
+    "df_max_shifts.to_csv(\"df_max_shifts.csv\", index=False)\n",
+    "\n"
    ]
   },
   {
