--- a/connection_bd.ipynb
+++ b/connection_bd.ipynb
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -980,47 +980,257 @@
        "      <td>China</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4856_4087_13_36N</td>\n",
+       "      <td>4856_4087_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Uganda</td>\n",
+       "      <td>Africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5989_3554_13_44N</td>\n",
+       "      <td>5989_3554_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2850_4139_13_21S</td>\n",
+       "      <td>2850_4139_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>South America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4791_3920_13_36N</td>\n",
+       "      <td>4791_3920_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>S. Sudan</td>\n",
+       "      <td>Africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>4780_3377_13_36N</td>\n",
+       "      <td>4780_3377_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Egypt</td>\n",
+       "      <td>Africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>6466_3380_13_48N</td>\n",
+       "      <td>6466_3380_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>3002_4273_13_22S</td>\n",
+       "      <td>3002_4273_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>South America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>6688_3456_13_49N</td>\n",
+       "      <td>6688_3456_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>4169_3944_13_31N</td>\n",
+       "      <td>4169_3944_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>Africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>6468_3360_13_48N</td>\n",
+       "      <td>6468_3360_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>6824_4117_13_50S</td>\n",
+       "      <td>6824_4117_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>6381_3681_13_47N</td>\n",
+       "      <td>6381_3681_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1700_3100_13_13N</td>\n",
+       "      <td>1700_3100_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>North America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>4421_3800_13_33N</td>\n",
+       "      <td>4421_3800_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Niger</td>\n",
+       "      <td>Africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2624_4314_13_20S</td>\n",
+       "      <td>2624_4314_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>South America</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              label           key train_test  \\\n",
-       "0  4397_4302_13_33S  4397_4302_13      train   \n",
-       "1  2415_3082_13_18N  2415_3082_13      train   \n",
-       "2  2832_4366_13_21S  2832_4366_13      train   \n",
-       "3  4838_3506_13_36N  4838_3506_13      train   \n",
-       "4  6752_3115_13_50N  6752_3115_13      train   \n",
+       "               label           key train_test  \\\n",
+       "0   4397_4302_13_33S  4397_4302_13      train   \n",
+       "1   2415_3082_13_18N  2415_3082_13      train   \n",
+       "2   2832_4366_13_21S  2832_4366_13      train   \n",
+       "3   4838_3506_13_36N  4838_3506_13      train   \n",
+       "4   6752_3115_13_50N  6752_3115_13      train   \n",
+       "5   4856_4087_13_36N  4856_4087_13      train   \n",
+       "6   5989_3554_13_44N  5989_3554_13      train   \n",
+       "8   2850_4139_13_21S  2850_4139_13      train   \n",
+       "9   4791_3920_13_36N  4791_3920_13      train   \n",
+       "10  4780_3377_13_36N  4780_3377_13      train   \n",
+       "11  6466_3380_13_48N  6466_3380_13      train   \n",
+       "12  3002_4273_13_22S  3002_4273_13      train   \n",
+       "13  6688_3456_13_49N  6688_3456_13      train   \n",
+       "14  4169_3944_13_31N  4169_3944_13      train   \n",
+       "15  6468_3360_13_48N  6468_3360_13      train   \n",
+       "16  6824_4117_13_50S  6824_4117_13      train   \n",
+       "17  6381_3681_13_47N  6381_3681_13      train   \n",
+       "18  1700_3100_13_13N  1700_3100_13      train   \n",
+       "19  4421_3800_13_33N  4421_3800_13      train   \n",
+       "20  2624_4314_13_20S  2624_4314_13      train   \n",
        "\n",
-       "                                         labels_path  \\\n",
-       "0  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
-       "1  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
-       "2  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
-       "3  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
-       "4  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "                                          labels_path  \\\n",
+       "0   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "1   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "2   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "3   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "4   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "5   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "6   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "8   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "9   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "10  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "11  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "12  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "13  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "14  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "15  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "16  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "17  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "18  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "19  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "20  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
        "\n",
-       "                                         planet_path  \\\n",
-       "0  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
-       "1  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
-       "2  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
-       "3  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
-       "4  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "                                          planet_path  \\\n",
+       "0   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "1   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "2   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "3   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "4   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "5   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "6   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "8   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "9   ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "10  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "11  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "12  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "13  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "14  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "15  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "16  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "17  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "18  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "19  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "20  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
        "\n",
-       "                    country      continent  \n",
-       "0                    Angola         Africa  \n",
-       "1  United States of America  North America  \n",
-       "2                    Brazil  South America  \n",
-       "3                     Egypt         Africa  \n",
-       "4                     China           Asia  "
+       "                     country      continent  \n",
+       "0                     Angola         Africa  \n",
+       "1   United States of America  North America  \n",
+       "2                     Brazil  South America  \n",
+       "3                      Egypt         Africa  \n",
+       "4                      China           Asia  \n",
+       "5                     Uganda         Africa  \n",
+       "6                      India           Asia  \n",
+       "8                     Brazil  South America  \n",
+       "9                   S. Sudan         Africa  \n",
+       "10                     Egypt         Africa  \n",
+       "11                     China           Asia  \n",
+       "12                    Brazil  South America  \n",
+       "13                     China           Asia  \n",
+       "14                   Nigeria         Africa  \n",
+       "15                     China           Asia  \n",
+       "16                 Indonesia           Asia  \n",
+       "17                  Thailand           Asia  \n",
+       "18  United States of America  North America  \n",
+       "19                     Niger         Africa  \n",
+       "20                    Brazil  South America  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_merged.head()"
+    "df_merged.head(20)"
    ]
   },
   {
@@ -2769,7 +2979,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset\n",
+    "import numpy as np\n",
+    "import rasterio\n",
+    "\n",
+    "class MultiBandDataset(Dataset):\n",
+    "    def __init__(self, dataframe, transform=None, target_transform=None):\n",
+    "        \"\"\"\n",
+    "        dataframe       : DataFrame contenant les colonnes 'planet_path' (images 4 bandes)\n",
+    "                          et 'labels_path' (masques 8 bandes).\n",
+    "        transform       : Transformations à appliquer sur l'image (ex: data augmentation).\n",
+    "        target_transform: Transformations à appliquer sur le masque.\n",
+    "        \"\"\"\n",
+    "        self.dataframe = dataframe.reset_index(drop=True)\n",
+    "        self.transform = transform\n",
+    "        self.target_transform = target_transform\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.dataframe)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        row = self.dataframe.iloc[idx]\n",
+    "\n",
+    "        # Chemins vers l'image (4 bandes) et le masque (8 bandes)\n",
+    "        image_path = row[\"planet_path\"]\n",
+    "        label_path = row[\"labels_path\"]\n",
+    "\n",
+    "        # Lecture de l'image multispectrale 4 bandes\n",
+    "        with rasterio.open(image_path) as src:\n",
+    "            image = src.read()  # shape [4, H, W]\n",
+    "\n",
+    "        # Lecture du masque 8 bandes\n",
+    "        with rasterio.open(label_path) as src:\n",
+    "            mask = src.read()  # shape [8, H, W]\n",
+    "        \n",
+    "        # Conversion en float32 (ou autre type si nécessaire)\n",
+    "        image = image.astype(np.float32)\n",
+    "        mask = mask.astype(np.float32)\n",
+    "        \n",
+    "        # Passage en tenseurs PyTorch\n",
+    "        # Rasterio renvoie déjà la forme [C, H, W], donc pas besoin de transpose\n",
+    "        image = torch.from_numpy(image)\n",
+    "        mask = torch.from_numpy(mask)\n",
+    "\n",
+    "        # Application des transformations\n",
+    "        if self.transform is not None:\n",
+    "            image = self.transform(image)\n",
+    "        if self.target_transform is not None:\n",
+    "            mask = self.target_transform(mask)\n",
+    "\n",
+    "        return image, mask\n",
+    "\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
