Ajout continent + augmentation donnees

--- a/test_malfoy.ipynb
+++ b/test_malfoy.ipynb
@@ -608,6 +608,208 @@
     "plt.subplot(1, 2, 2)\n",
     "classes.show_class(3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>key</th>\n",
+       "      <th>train_test</th>\n",
+       "      <th>labels_path</th>\n",
+       "      <th>planet_path</th>\n",
+       "      <th>country</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>date</th>\n",
+       "      <th>alignment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4397_4302_13_33S</td>\n",
+       "      <td>4397_4302_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4397_4302_13_33S</td>\n",
+       "      <td>4397_4302_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4397_4302_13_33S</td>\n",
+       "      <td>4397_4302_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>2018-03-01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4397_4302_13_33S</td>\n",
+       "      <td>4397_4302_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>2018-04-01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4397_4302_13_33S</td>\n",
+       "      <td>4397_4302_13</td>\n",
+       "      <td>train</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>../../../../tsi/data_education/fil_rouge_Airbu...</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>2018-05-01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              label           key train_test  \\\n",
+       "0  4397_4302_13_33S  4397_4302_13      train   \n",
+       "1  4397_4302_13_33S  4397_4302_13      train   \n",
+       "2  4397_4302_13_33S  4397_4302_13      train   \n",
+       "3  4397_4302_13_33S  4397_4302_13      train   \n",
+       "4  4397_4302_13_33S  4397_4302_13      train   \n",
+       "\n",
+       "                                         labels_path  \\\n",
+       "0  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "1  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "2  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "3  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "4  ../../../../tsi/data_education/fil_rouge_Airbu...   \n",
+       "\n",
+       "                                         planet_path country continent  \\\n",
+       "0  ../../../../tsi/data_education/fil_rouge_Airbu...  Angola    Africa   \n",
+       "1  ../../../../tsi/data_education/fil_rouge_Airbu...  Angola    Africa   \n",
+       "2  ../../../../tsi/data_education/fil_rouge_Airbu...  Angola    Africa   \n",
+       "3  ../../../../tsi/data_education/fil_rouge_Airbu...  Angola    Africa   \n",
+       "4  ../../../../tsi/data_education/fil_rouge_Airbu...  Angola    Africa   \n",
+       "\n",
+       "         date  alignment  \n",
+       "0  2018-01-01       True  \n",
+       "1  2018-02-01       True  \n",
+       "2  2018-03-01       True  \n",
+       "3  2018-04-01       True  \n",
+       "4  2018-05-01       True  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"df_merged_extended.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>key</th>\n",
+       "      <th>train_test</th>\n",
+       "      <th>labels_path</th>\n",
+       "      <th>planet_path</th>\n",
+       "      <th>country</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>date</th>\n",
+       "      <th>alignment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [label, key, train_test, labels_path, planet_path, country, continent, date, alignment]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_america = df[df[\"continent\"] == \"North America\"]\n",
+    "df_america.head()"
+   ]
   }
  ],
  "metadata": {
