Enhance data exploration notebook with detailed analysis and organization of DynamicEarthNet dataset

--- a/projet_computer_vision.ipynb
+++ b/projet_computer_vision.ipynb
@@ -28,7 +28,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La première étape de notre projet à donc été de visualiser et de prendre en main la données. Pour cela deux module ont été crée : [sat_image_reader](src/sat_image_reader.py) et [classes_reader](src/classes_reader.py)"
+    "La première étape de notre projet à donc été de visualiser et de prendre en main la données. Pour cela deux module ont été crée : [sat_image_reader](src/sat_image_reader.py) et [classes_reader](src/classes_reader.py).\n",
+    "\n",
+    "Grâçe à cela, nous avons pu analyser diverses images et les prendre en main dans un [notebook](exploration_données_Alexandre.ipynb).\n",
+    "Nous avons alors pu comprendre les diverses classes de DynamicEarthNet, leur implémentation (sous 8 bandes à valeurs 0 ou 255 si la classe est présente) et l'évolution temporelle."
    ]
   },
   {
@@ -46,15 +49,22 @@
     "4. **Agriculture** – Zones agricoles cultivées.\n",
     "5. **Wetlands** – Zones humides.\n",
     "6. **Water** – Plans d’eau.\n",
-    "7. **Snow & Ice** – Neige et glace (rare, non incluse dans cette analyse).\n",
+    "7. **Snow & Ice** – Neige et glace (rare).\n",
     "\n",
-    "Dans la zone étudiée (**10N-123W-45N**), seules **3 classes principales** sont présentes :\n",
+    "Mais elles ne sont pas forcèment toutes présente à chaque fois : par exemple dans une zone étudiée du notebook (**10N-123W-45N**), seules **3 classes principales** sont présentes :\n",
     "\n",
     "- **Impervious Surface (bande 1)**\n",
     "- **Forest and Other Vegetation (bande 3)**\n",
     "- **Soil (bande 5)**\n",
     "\n",
     "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous avons donc pris cela en compte lors de la création de notre [dataloader](src/dataloader.py)."
    ]
   },
   {
@@ -88,24 +98,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## **4. Analyse complémentaire : NDVI**\n",
-    "\n",
-    "Un calcul de l’**indice de végétation NDVI** a été effectué à partir des bandes rouge et proche infrarouge :\n",
-    "\n",
-    "- **Objectif** : Vérifier la correspondance entre le NDVI et les annotations de végétation.\n",
-    "- **Résultats** :\n",
-    "  - NDVI élevé (> 0.5) → correspondance forte avec la classe **Forest & Other Vegetation**.\n",
-    "  - Confirmation de la pertinence du NDVI comme attribut supplémentaire pour améliorer la segmentation.\n",
-    "\n",
-    "---\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## **5. Analyse de la qualité des données (PF-QA)**\n",
+    "## **4. Analyse de la qualité des données (PF-QA)**\n",
     "\n",
     "L’étude des fichiers **PF-QA (Planet Fusion Quality Assurance)** a permis de :\n",
     "- Identifier les pixels basés sur des observations satellites directes vs interpolées.\n",
@@ -118,18 +111,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **Exploration des fichiers et structuration des données**\n",
     "\n",
-    "## **6. Synthèse des résultats de l’exploration**\n",
     "\n",
-    "L’exploration des données DynamicEarthNet a permis de dégager les éléments suivants :\n",
-    "- **Trois classes principales retenues** : Impervious Surface, Forest & Other Vegetation, et Soil.\n",
-    "- Les annotations raster sont **clairement binaires**, facilitant l’apprentissage supervisé.\n",
-    "- Validation rigoureuse des annotations grâce aux données vectorielles.\n",
-    "- **Le NDVI est un bon indicateur** pour compléter la segmentation des zones végétalisées.\n",
-    "- **Les données PF-QA doivent être prises en compte** pour éviter d’entraîner le modèle sur des pixels interpolés.\n",
+    "## **1. Organisation et exploration des fichiers**\n",
+    "Le chemin principal des données est défini par `PATH_DATA`, qui contient :\n",
+    "- Les images satellites **Planet Fusion** (`planet.10N/planet/10N/`).\n",
+    "- Les labels annotés (`labels/labels/` et `dynamicearthnet_test_labels`).\n",
     "\n",
-    "Ces observations serviront de **base pour l’entraînement d’un modèle de segmentation** précis et fiable à partir des images satellites de DynamicEarthNet."
+    "L’exploration initiale a permis :\n",
+    "- 📂 **D’identifier les fichiers et répertoires disponibles**.\n",
+    "- 🏷️ **De compter et comparer les labels d’entraînement et de test**.\n",
+    "- 📍 **D’afficher les sous-dossiers Planet contenant les images TIFF** pour une organisation claire des données.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **2. Construction des DataFrames de labels et images**\n",
+    "L’organisation des labels a été systématisée en DataFrames `df_labels_train` et `df_labels_test` :\n",
+    "- **Extraction des clés d’identification** pour assurer la correspondance avec les images satellites.\n",
+    "- **Identification des labels d’entraînement et de test**.\n",
+    "- **Création d’un chemin structuré pour chaque label**.\n",
+    "\n",
+    "Les images satellites ont été associées aux labels via une fusion avec `df_planet`, permettant de structurer les correspondances entre annotations et images sources.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **3. Localisation géographique des images**\n",
+    "L’analyse de la **localisation des images satellites** a été effectuée en croisant leurs coordonnées avec une base de données mondiale des pays (`ne_110m_admin_0_countries.shp`).\n",
+    "\n",
+    "- 🌍 **Transformation des coordonnées vers EPSG:4326** (longitude/latitude).\n",
+    "- 🗺️ **Détection du pays et du continent** associé à chaque image satellite.\n",
+    "- 🔗 **Association des informations géographiques aux métadonnées des images**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **4. Vérification de l’alignement des images satellites**\n",
+    "Un contrôle d’alignement des images (`ImageAlignementCheck`) a été effectué pour s’assurer de leur qualité, nous avions initialement prévu de faire avec le suivi temporelle mais nous avons ensuite abandonné cette idée :\n",
+    "- 📏 **Analyse des décalages moyens et maximaux entre images successives**.\n",
+    "- ❌ **Identification des images mal alignées** afin de les exclure du futur entraînement du modèle.\n",
+    "\n",
+    "Les résultats ont été stockés dans `df_results.csv` et intégrés dans `df_merged_extended` pour une meilleure gestion des images.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "L’ensemble de ces étapes garantit une **base de données robuste et de haute qualité** pour l'entraînement du **réseau de neurones de segmentation spatiale**. 🚀\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
